@@ -11,6 +11,7 @@
 
 #    include "ScStaff.hpp"
 
+#    include "../../../entity/PatrolArea.h"
 #    include "../../../entity/Staff.h"
 
 namespace OpenRCT2::Scripting
@@ -26,6 +27,7 @@ namespace OpenRCT2::Scripting
         dukglue_register_property(ctx, &ScStaff::staffType_get, &ScStaff::staffType_set, "staffType");
         dukglue_register_property(ctx, &ScStaff::colour_get, &ScStaff::colour_set, "colour");
         dukglue_register_property(ctx, &ScStaff::costume_get, &ScStaff::costume_set, "costume");
+        dukglue_register_property(ctx, &ScStaff::patrolArea_get, nullptr, "patrolArea");
         dukglue_register_property(ctx, &ScStaff::orders_get, &ScStaff::orders_set, "orders");
     }
 
@@ -122,6 +124,11 @@ namespace OpenRCT2::Scripting
         }
     }
 
+    std::shared_ptr<ScPatrolArea> ScStaff::patrolArea_get() const
+    {
+        return std::make_shared<ScPatrolArea>(_id);
+    }
+
     uint8_t ScStaff::orders_get() const
     {
         auto peep = GetStaff();
@@ -136,6 +143,131 @@ namespace OpenRCT2::Scripting
         {
             peep->StaffOrders = value;
         }
+    }
+
+    ScPatrolArea::ScPatrolArea(EntityId id)
+        : _staffId(id)
+    {
+    }
+
+    void ScPatrolArea::Register(duk_context* ctx)
+    {
+        dukglue_register_property(ctx, &ScPatrolArea::tiles_get, &ScPatrolArea::tiles_set, "tiles");
+        dukglue_register_method(ctx, &ScPatrolArea::clear, "clear");
+        dukglue_register_method(ctx, &ScPatrolArea::add, "add");
+        dukglue_register_method(ctx, &ScPatrolArea::remove, "remove");
+        dukglue_register_method(ctx, &ScPatrolArea::contains, "contains");
+    }
+
+    Staff* ScPatrolArea::GetStaff() const
+    {
+        return GetEntity<Staff>(_staffId);
+    }
+
+    void ScPatrolArea::ModifyArea(const DukValue& coordsOrRange, bool value) const
+    {
+        auto staff = GetStaff();
+        if (staff != nullptr)
+        {
+            if (coordsOrRange.is_array())
+            {
+                auto dukCoords = coordsOrRange.as_array();
+                for (const auto& dukCoord : dukCoords)
+                {
+                    auto coord = FromDuk<CoordsXY>(dukCoord);
+                    staff->SetPatrolArea(coord, value);
+                    map_invalidate_tile_full(coord);
+                }
+            }
+            else
+            {
+                auto mapRange = FromDuk<MapRange>(coordsOrRange);
+                for (int32_t y = mapRange.GetTop(); y <= mapRange.GetBottom(); y += COORDS_XY_STEP)
+                {
+                    for (int32_t x = mapRange.GetLeft(); x <= mapRange.GetRight(); x += COORDS_XY_STEP)
+                    {
+                        CoordsXY coord(x, y);
+                        staff->SetPatrolArea(coord, value);
+                        map_invalidate_tile_full(coord);
+                    }
+                }
+            }
+            UpdateConsolidatedPatrolAreas();
+        }
+    }
+
+    DukValue ScPatrolArea::tiles_get() const
+    {
+        auto ctx = GetContext()->GetScriptEngine().GetContext();
+
+        duk_push_array(ctx);
+
+        auto staff = GetStaff();
+        if (staff != nullptr && staff->PatrolInfo != nullptr)
+        {
+            auto tiles = staff->PatrolInfo->ToVector();
+
+            duk_uarridx_t index = 0;
+            for (const auto& tile : tiles)
+            {
+                auto dukCoord = ToDuk(ctx, tile.ToCoordsXY());
+                dukCoord.push();
+                duk_put_prop_index(ctx, -2, index);
+                index++;
+            }
+        }
+
+        return DukValue::take_from_stack(ctx, -1);
+    }
+
+    void ScPatrolArea::tiles_set(const DukValue& value)
+    {
+        ThrowIfGameStateNotMutable();
+
+        auto staff = GetStaff();
+        if (staff != nullptr)
+        {
+            staff->ClearPatrolArea();
+            if (value.is_array())
+            {
+                ModifyArea(value, true);
+            }
+        }
+    }
+
+    void ScPatrolArea::clear()
+    {
+        ThrowIfGameStateNotMutable();
+
+        auto staff = GetStaff();
+        if (staff != nullptr)
+        {
+            staff->ClearPatrolArea();
+            UpdateConsolidatedPatrolAreas();
+        }
+    }
+
+    void ScPatrolArea::add(const DukValue& coordsOrRange)
+    {
+        ThrowIfGameStateNotMutable();
+        ModifyArea(coordsOrRange, true);
+    }
+
+    void ScPatrolArea::remove(const DukValue& coordsOrRange)
+    {
+        ThrowIfGameStateNotMutable();
+        ModifyArea(coordsOrRange, false);
+    }
+
+    bool ScPatrolArea::contains(const DukValue& coord) const
+    {
+        auto staff = GetStaff();
+        if (staff != nullptr)
+        {
+            auto pos = FromDuk<CoordsXY>(coord);
+            return staff->IsLocationInPatrol(pos);
+        }
+        return false;
     }
 
 } // namespace OpenRCT2::Scripting
